# biscuit-rust

./: Cargo.toml  README.md  SECURITY.md  release-checklist.md
.github/workflows/: release.yml  rust.yml
biscuit-auth/: CHANGELOG.md  Cargo.toml  README.md
biscuit-auth/benches/: token.rs
biscuit-auth/examples/: testcases.rs  third_party.rs  verifying_printer.rs
biscuit-auth/samples/: README.md  samples.json  test034_array_map.bc
biscuit-auth/src/: bwk.rs  error.rs  lib.rs  macros.rs  parser.rs  time.rs
biscuit-auth/src/crypto/: ed25519.rs  mod.rs  p256.rs  traits.rs
biscuit-auth/src/crypto/awslc/: ed25519.rs  mod.rs  secp256r1.rs
biscuit-auth/src/crypto/default/: ed25519.rs  secp256r1.rs
biscuit-auth/src/datalog/: expression.rs  mod.rs  origin.rs  symbol.rs
biscuit-auth/src/format/: convert.rs  mod.rs  schema.rs
biscuit-auth/src/token/: authorizer.rs  block.rs  builder.rs  mod.rs  public_keys.rs  third_party.rs  unverified.rs
biscuit-auth/src/token/authorizer/: snapshot.rs
biscuit-auth/tests/: macros.rs  rights.rs
biscuit-capi/: Cargo.toml  README.md
biscuit-capi/src/: lib.rs
biscuit-capi/tests/: capi.rs
biscuit-parser/: CHANGELOG.md  Cargo.toml
biscuit-parser/src/: builder.rs  parser.rs
biscuit-proto/: Cargo.toml
biscuit-proto/src/: lib.rs
biscuit-proto/tests/: schema_up_to_date.rs
biscuit-quote/: CHANGELOG.md  Cargo.toml
biscuit-quote/src/: lib.rs
biscuit-quote/tests/: error_message.rs
biscuit-quote/tests/error_message/: authorizer_macro.rs  authorizer_macro.stderr  biscuit_macro.rs  biscuit_macro.stderr
(+11 files in other folders)
